--- a/index.html
+++ b/index.html
@@ -130,7 +130,151 @@
   <!-- </div> -->
 </nav>
 
-<main class="container">
+<main role="main" class="container">
+  <div class="row">
+    <div class="col-md-9">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card mb-3">
+            <div class="card-body">
+              <span>Kategori : <strong>Semua Kategori</strong></span>    
+              <span class="float-right">Urutkan harga : <a href="#" class="badge text-bg-primary">Termurah</a> | <a href="#" class="badge text-bg-primary">Termahal</a></span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="card mb-3">
+            <img src="https://placehold.co/100x70" alt="" class="card-img-top">
+            <div class="body mb-2">
+              <h5 class="card-title">Product Title</h5>
+              <p class="card-text"><strong>Rp.100.000,-</strong></p>
+              <p class="card-text">Some quick example text to build product card.</p>
+              <a href="#" class="badge text-bg-primary"><i class="fas fa-tags"></i> Category</a>
+            </div>
+            <div class="card-footer">
+              <form action="">
+                <div class="input-group">
+                  <input type="number" class="form-control">
+                  <div class="input-group-append">
+                    <button class="btn btn-primary">Add to Cart</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card mb-3">
+            <img src="https://placehold.co/100x70" alt="" class="card-img-top">
+            <div class="body mb-2">
+              <h5 class="card-title">Product Title</h5>
+              <p class="card-text"><strong>Rp.100.000,-</strong></p>
+              <p class="card-text">Some quick example text to build product card.</p>
+              <a href="#" class="badge text-bg-primary"><i class="fas fa-tags"></i> Category</a>
+            </div>
+            <div class="card-footer">
+              <form action="">
+                <div class="input-group">
+                  <input type="number" class="form-control">
+                  <div class="input-group-append">
+                    <button class="btn btn-primary">Add to Cart</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card mb-3">
+            <img src="https://placehold.co/100x70" alt="" class="card-img-top">
+            <div class="body mb-2">
+              <h5 class="card-title">Product Title</h5>
+              <p class="card-text"><strong>Rp.100.000,-</strong></p>
+              <p class="card-text">Some quick example text to build product card.</p>
+              <a href="#" class="badge text-bg-primary"><i class="fas fa-tags"></i> Category</a>
+            </div>
+            <div class="card-footer">
+              <form action="">
+                <div class="input-group">
+                  <input type="number" class="form-control">
+                  <div class="input-group-append">
+                    <button class="btn btn-primary">Add to Cart</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card mb-3">
+            <img src="https://placehold.co/100x70" alt="" class="card-img-top">
+            <div class="body mb-2">
+              <h5 class="card-title">Product Title</h5>
+              <p class="card-text"><strong>Rp.100.000,-</strong></p>
+              <p class="card-text">Some quick example text to build product card.</p>
+              <a href="#" class="badge text-bg-primary"><i class="fas fa-tags"></i> Category</a>
+            </div>
+            <div class="card-footer">
+              <form action="">
+                <div class="input-group">
+                  <input type="number" class="form-control">
+                  <div class="input-group-append">
+                    <button class="btn btn-primary">Add to Cart</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        </ul>
+      </nav> 
+    </div>    
+    <div class="col-md-3">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card mb-3">
+            <div class="card-header">
+              Pencarian
+            </div>
+            <div class="card-body">
+              <form action="">
+                <div class="input-group">
+                  <input type="text" class="form-control">
+                  <div class="input-group-append">
+                    <button class="btn btn-primary">Cari</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card mb-3">
+            <div class="card-header">
+              Kategori
+            </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Semua Kategori</li>
+                <li class="list-group-item">Kategori 1</li>
+                <li class="list-group-item">Kategori 2</li>
+              </ul>              
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </main>
 <script src="/assets/libs/jquery/jquery-3.7.1.min.js"></script>
