--- a/admin-category.html
+++ b/admin-category.html
@@ -135,8 +135,8 @@
     <div class="col-md-10 mx-auto">
       <div class="card">
         <div class="card-header">
-          <span>Pengguna</span>
-          <a href="/admin-users-form.html" class="btn btn-sm btn-secondary">Tambah</a>
+          <span>Kategori</span>
+          <a href="/admin-category-form.html" class="btn btn-sm btn-secondary">Tambah</a>
 
           <div class="float-right">
             <form action="#">
@@ -159,25 +159,33 @@
             <thead>
                 <tr>
                     <th class="col">#</th>
-                    <th class="col">Pengguna</th>
-                    <th class="col">E-Mail</th>
-                    <th class="col">Role</th>
-                    <th class="col">Status</th>
+                    <th class="col">Title</th>
+                    <th class="col">Slug</th>
                     <th class="col"></th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>1</td>
+                    <td>Laptops</td>
+                    <td>laptops</td>
                     <td>
-                        <p>
-                            <img src="https://placehold.co/70x70" alt="">
-                            Admin
-                        </p>
+                        <form action="#">
+                            <a href="#">
+                                <button class="btn btn-sm">
+                                    <i class="fas fa-edit text-bg-info"></i> edit
+                                </button>
+                            </a>
+                            <button class="btn btn-sm" type="submit" onclick="return confirm('Are You Sure?')">
+                                <i class="fas fa-trash-alt text-bg-danger"></i> delete
+                            </button>
+                        </form>                        
                     </td>
-                    <td>admin@gmail.com</td>
-                    <td>Admin</td>
-                    <td>Aktif</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Smartphone</td>
+                    <td>smartphone</td>
                     <td>
                         <form action="#">
                             <a href="#">
