--- a/admin-users.html
+++ b/admin-users.html
@@ -158,12 +158,12 @@
           <table class="table">
             <thead>
                 <tr>
-                    <th class="col">#</th>
-                    <th class="col">Pengguna</th>
-                    <th class="col">E-Mail</th>
-                    <th class="col">Role</th>
-                    <th class="col">Status</th>
-                    <th class="col"></th>
+                    <th scope="col">#</th>
+                    <th scope="col">Pengguna</th>
+                    <th scope="col">E-Mail</th>
+                    <th scope="col">Role</th>
+                    <th scope="col">Status</th>
+                    <th scope="col"></th>
                 </tr>
             </thead>
             <tbody>
