--- a/checkout-success.html
+++ b/checkout-success.html
@@ -102,7 +102,7 @@
             <div class="dropdown-menu" aria-labelledby="dropdown-1">
               <a href="/admin-category.html" class="dropdown-item">Kategori</a>
               <a href="/admin-product.html" class="dropdown-item">Produk</a>
-              <a href="/admin-order.html" class="dropdown-item">Order</a>
+              <a href="/admin-orders.html" class="dropdown-item">Orders</a>
             </div>
           </li>
         </ul>
@@ -120,7 +120,7 @@
             <a href="#" class="nav-link dropdown-toggle" id="dropdown-2" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin</a>
             <div class="dropdown-menu" aria-labelledby="dropdown-2">
               <a href="/profile.html" class="dropdown-item">Profile</a>
-              <a href="/order.html" class="dropdown-item">Order</a>
+              <a href="/orders.html" class="dropdown-item">Orders</a>
               <a href="#" class="dropdown-item">Logout</a>
             </div>
           </li>        
@@ -146,7 +146,7 @@
                     <li>Sertakan keterangan dengan nomor order: <strong></strong></li>
                     <li>Total pembayaran: <strong>Rp.300.000,-</strong></li>
                 </ol>
-                <p>Jika sudah, silahkan kirimkan bukti transfer dihalaman konfirmasi atau bisa <a href="/order-detail.html">klik disini</a>!</p>
+                <p>Jika sudah, silahkan kirimkan bukti transfer dihalaman konfirmasi atau bisa <a href="/orders-detail.html">klik disini</a>!</p>
                 <a href="/index.html" class="btn btn-primary"><i class="fas fa-angle-left"></i>Kembali</a>
             </div>
         </div>
