--- a/orders-confirm.html
+++ b/orders-confirm.html
@@ -101,7 +101,7 @@
             <div class="dropdown-menu" aria-labelledby="dropdown-1">
               <a href="/admin-category.html" class="dropdown-item">Kategori</a>
               <a href="/admin-product.html" class="dropdown-item">Produk</a>
-              <a href="/admin-order.html" class="dropdown-item">Order</a>
+              <a href="/admin-orders.html" class="dropdown-item">Orders</a>
             </div>
           </li>
         </ul>
@@ -119,7 +119,7 @@
             <a href="#" class="nav-link dropdown-toggle" id="dropdown-2" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin</a>
             <div class="dropdown-menu" aria-labelledby="dropdown-2">
               <a href="/profile.html" class="dropdown-item">Profile</a>
-              <a href="/order.html" class="dropdown-item">Order</a>
+              <a href="/orders.html" class="dropdown-item">Orders</a>
               <a href="#" class="dropdown-item">Logout</a>
             </div>
           </li>        
