--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="dropdown-menu" aria-labelledby="dropdown-1">
               <a href="/admin-category.html" class="dropdown-item">Kategori</a>
               <a href="/admin-product.html" class="dropdown-item">Produk</a>
-              <a href="/admin-order.html" class="dropdown-item">Order</a>
+              <a href="/admin-orders.html" class="dropdown-item">Orders</a>
               <a href="/admin-users.html" class="dropdown-item">Pengguna</a>
             </div>
           </li>
@@ -121,7 +121,7 @@
             <a href="#" class="nav-link dropdown-toggle" id="dropdown-2" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin</a>
             <div class="dropdown-menu" aria-labelledby="dropdown-2">
               <a href="/profile.html" class="dropdown-item">Profile</a>
-              <a href="/order.html" class="dropdown-item">Order</a>
+              <a href="/orders.html" class="dropdown-item">Orders</a>
               <a href="#" class="dropdown-item">Logout</a>
             </div>
           </li>        
